--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-   
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.1",
-    "react-router-dom": "^6.14.1",
-    "vite-plugin-commonjs": "^0.10.1"
+    "react-router-dom": "^6.14.1"
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
