--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "animate.css": "^4.1.1",
+    "i18next": "^23.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
